# workshop-paphos-2024-11

./: .gitignore  README.md  workshop-recursion-schemes.cabal
src/Exercises/: Hour1.hs  Hour2.hs  Hour3.hs
src/Lectures/: Hour1.hs  Hour2.hs  Hour3.hs
src/StudentWork/: Example.hs  Miko.hs
