cabal-version:      3.0
name:               workshop-recursion-schemes
version:            0.1.0.0
synopsis:           Workshop on recursion schemes, 8-9 November 2024.
author:             Komi Golov
maintainer:         komi.golov@jetbrains.com
build-type:         Simple

extra-doc-files:    README.md

common warnings
    -- ghc-options: -Wall

library
    import:           warnings
    default-extensions: NoMonomorphismRestriction, GADTs, StandaloneDeriving, TypeOperators,
                        DeriveFunctor, DeriveFoldable, ExplicitForAll, ScopedTypeVariables,
                        KindSignatures
    other-modules:
        -- Exercises
        Exercises.Hour1,
        Exercises.Hour2,
        -- Student work
        StudentWork.Example,
        -- Lectures
        Lectures.Hour1,
        Lectures.Hour2
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010
